--- a/dictionant-frontend/src/app/word-form/word-form.component.html
+++ b/dictionant-frontend/src/app/word-form/word-form.component.html
@@ -1,3 +1,31 @@
-<p>
-  word-form works!
-</p>
+<div class="card my-5">
+  <div class="card-body">
+    <form (ngSubmit)="onSubmit()" #wordForm="ngForm">
+      <div class="form-group">
+        <label for="word">Word</label>
+        <input type="text" [(ngModel)]="word.word"
+               class="form-control" id="word" name="word" placeholder="Enter the word"
+               required #word="ngModel">
+      </div>
+      <div [hidden]="!word.pristine" class="alert alert-danger">Word is required!</div>
+
+      <div class="form-group">
+        <label for="description">Description</label>
+        <input type="text" [(ngModel)]="word.description"
+               class="form-control" id="description" name="description" placeholder="Please enter a description."
+               required #description="ngModel">
+        <div [hidden]="!description.pristine" class="alert alert-danger">Description is required!</div>
+      </div>
+
+      <div class="form-group">
+        <label for="language">Language</label>
+        <input type="text" [(ngModel)]="word.language"
+               class="form-control" id="language" name="language" placeholder="Enter the language"
+               required #language="ngModel">
+      </div>
+      <div [hidden]="!language.pristine" class="alert alert-danger">Language is required!</div>
+
+      <button type="submit" [disabled]="!wordForm.form.valid" class="btn btn-info">Submit</button>
+    </form>
+  </div>
+</div>
