--- a/dictionant-frontend/src/app/word-form/word-form.component.html
+++ b/dictionant-frontend/src/app/word-form/word-form.component.html
@@ -1,29 +1,30 @@
 <div class="card my-5">
   <div class="card-body">
     <form (ngSubmit)="onSubmit()" #wordForm="ngForm">
+
       <div class="form-group">
-        <label for="word">Word</label>
-        <input type="text" [(ngModel)]="word.word"
-               class="form-control" id="word" name="word" placeholder="Enter the word"
-               required #word="ngModel">
+        <label for="name">Name</label>
+        <input #name="ngModel" [(ngModel)]="word.name" required
+               type="text" class="form-control" id="name" name="name" placeholder="Enter the word">
       </div>
-      <div [hidden]="!word.pristine" class="alert alert-danger">Word is required!</div>
+      <div *ngIf="name.invalid&&name.dirty" class="alert alert-danger">Word is required!</div>
 
       <div class="form-group">
         <label for="description">Description</label>
-        <input type="text" [(ngModel)]="word.description"
-               class="form-control" id="description" name="description" placeholder="Please enter a description."
-               required #description="ngModel">
-        <div [hidden]="!description.pristine" class="alert alert-danger">Description is required!</div>
+        <input #description="ngModel" [(ngModel)]="word.description" required
+               type="text" class="form-control" id="description" name="description"
+               placeholder="Please enter a description.">
+        <div *ngIf="description.invalid&&description.dirty" class="alert alert-danger">Description is required!</div>
       </div>
 
       <div class="form-group">
-        <label for="language">Language</label>
-        <input type="text" [(ngModel)]="word.language"
-               class="form-control" id="language" name="language" placeholder="Enter the language"
-               required #language="ngModel">
+        <select #languageId="ngModel" [(ngModel)]="word.language" required
+                class="form-control" id="languageId" name="languageId">
+          <option value="English" selected>English</option>
+          <option value="German">German</option>
+          <option value="Turkish">Turkish</option>
+        </select>
       </div>
-      <div [hidden]="!language.pristine" class="alert alert-danger">Language is required!</div>
 
       <button type="submit" [disabled]="!wordForm.form.valid" class="btn btn-info">Submit</button>
     </form>
